tests/ui/parser/anon-enums.stderr
error: anonymous `enum`s are not supported
  --> $DIR/anon-enums.rs:1:24
   |
LL | fn foo(x: bool) -> i32 | f64 {
   |                    --- ^ ---
   |
   = help: create a named `enum` instead

error: expected `|`, found `:`
  --> $DIR/anon-enums.rs:11:10
   |
LL |         _: i32 => println!("is integer"),
   |          ^ --- specifying the type of a pattern isn't supported
   |          |
   |          expected `|`

error: expected `|`, found `:`
  --> $DIR/anon-enums.rs:12:10
   |
LL |         _: f64 => println!("is float"),
   |          ^ --- specifying the type of a pattern isn't supported
   |          |
   |          expected `|`

error: aborting due to 3 previous errors

